Adding Image Slider

--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-
-    <script src="https://kit.fontawesome.com/3481a367e6.js" crossorigin="anonymous"></script>
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="./css/not.css">
     <link rel="stylesheet" href="./css/334.css">
     <link rel="stylesheet" href="./css/414.css">
@@ -17,15 +12,13 @@
 </head>
 
 <body>
-    <div class="not-suport">
-        <p></p>
-    </div>
     <div class="content">
         <div class="content-navbar">
             <a href="">Home</a>
-            <a target="_blank" class="ins" href="https://www.instagram.com/claybejr_">Instagram</a>
-            <a target="_blank" class="dc" href="https://www.tiktok.com/@clay.w17">Tiktok</a>
-            <a target="_blank" class="ghb" href="https://github.com/ClaytonBejrJoshuaWuisan">Github</a>
+            <a target="_blank" class="glr" href="gallery.html">gallery</a>
+            <a target="_blank" class="blg" href="blog.html">blog</a>
+            <a target="_blank" class="cnt" href="contact.html">contact</a>
+
         </div>
     </div>
 
